# Bussines-Plans-creator

./: .gitignore  README.md  StackBox.hs  businessPlanManager.cabal  exampleBuissenesPlan  stack.yaml
src/: App.hs  Calculations.hs  FileSaves.hs  Grid.hs  LeftRightForm.hs  Main.hs  ProjectInfo.hs  Stack.hs  StackSideBar.hs  StackSideBarCW.hs
