name:                businessPlanManager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/businessPlanManager#readme
license:             BSD3
license-file:        LICENSE
author:              skaer2
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable businessPlanManager
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gi-gtk
                     , gi-gtk-declarative
                     , gi-gtk-declarative-app-simple
                     , gi-glib
                     , gi-gdk
                     , gi-gobject
                     , text
                     , vector
                     , time
                     , async
                     , bytestring
                     , ilist
                     , containers
  ghc-options:         -threaded -Wall
  other-modules:       Grid
                     , Stack
                     , StackSidebarCW
                     , ProjectInfo
                     , LeftRightForm
